argocd/aws/397229547211/clusters/cbioportal-dev/apps/ingress/cbio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    # increae max response size to avoid 413 errors see
    # https://github.com/kubernetes/ingress-nginx/issues/1824
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # add proxy protocol to header
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  labels:
    app.kubernetes.io/instance: ingress
  name: cbioportal-ingress
  namespace: default
spec:
  rules:
  - host: www.cbioportal.org
    http:
      paths:
        - backend:
            service:
              name: cbioportal-backend-public-blue
              port:
                number: 80
          path: /
          pathType: Prefix
  - host: beta.cbioportal.org
    http:
      paths:
      - backend:
          service:
            name: cbioportal-backend-public-beta-blue
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: master.cbioportal.org
    http:
      paths:
        - backend:
            service:
              name: cbioportal-backend-master-blue
              port:
                number: 80
          path: /
          pathType: Prefix
  - host: clickhouse-only-db.cbioportal.org
    http:
      paths:
        - backend:
            service:
              name: cbioportal-backend-clickhouse-only-db-blue
              port:
                number: 80
          path: /
          pathType: Prefix
  - host: session-service-argocd.cbioportal.org
    http:
      paths:
        - backend:
            service:
              name: cbioportal-session-service
              port:
                number: 80
          path: /
          pathType: Prefix
  - host: session-service.cbioportal.org
    http:
      paths:
        - backend:
            service:
              name: cbioportal-session-service
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
  - hosts:
    - www.cbioportal.org
    secretName: www-cbioportal-cert
  - hosts:
    - beta.cbioportal.org
    secretName: cbioportal-beta-cert
  - hosts:
    - master.cbioportal.org
    secretName: master-cbio-cert
  - hosts:
    - clickhouse-only-db.cbioportal.org
    secretName: clickhouse-only-db-cert
  - hosts:
    - session-service-argocd.cbioportal.org
    secretName: cbioportal-session-service-argocd-cert
  - hosts:
      - session-service.cbioportal.org
    secretName: cbioportal-session-service-cert
